--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <script type="text/javascript" src="https://c-a-p-120.github.io/player-radio-estacion-mix/radio_js_tools.0.9.1.js" ></script>
       <nav>
         <ul>
-		<!– NEVEGACION <li><a href="#" target="_blank">Facebook</a></li>  –>
-		<!– NEVEGACION <li><a href="#" target="_blank">WhatsApp</a></li>  –>
+		<!--OCULTO--><li><a href="#" target="_blank">Facebook</a></li>
+		<!--OCULTO--><li><a href="#" target="_blank">WhatsApp</a></li>
 		<li><a href="https://masplay.000webhostapp.com/lista-temas.estacionmix.html" target="_blank">Historial de Musica</a></li>
 	 </ul>
     </nav>
