--- a/app.html
+++ b/app.html
@@ -15,12 +15,10 @@
         <link rel="stylesheet" href="css/style.css?v2322">
         <script src="main.js" type="module"></script>
     </head> 
-   
+   <center><h1 class="radio-name">Radio Estacion Mix</h1>
+            <button id="installButton" style="display: none"> ⫷ Instalar la  APP ⫸</button> 
+            </center>
 <body>
-       <center><h1 class="radio-name">Radio Estacion Mix</h1>
-            <button id="installButton" style="display: "> ⫷ Instalar la  APP ⫸</button> 
-            </center> 
-  
   <div class="cover-site">
         <div id="bgCover"></div>
         <div class="bg-mask"></div>
