--- a/app.html
+++ b/app.html
@@ -15,9 +15,7 @@
         <link rel="stylesheet" href="css/style.css?v2322">
         <script src="main.js" type="module"></script>
     </head> 
-   <center><h1 class="radio-name">Radio Estacion Mix</h1>
-            <button id="installButton" style="display: none"> ⫷ Instalar la  APP ⫸</button> 
-            </center>
+   <center><button id="installButton" style="display: none"> ⫷ Instalar la  APP ⫸</button> </center>
 <body>
   <div class="cover-site">
         <div id="bgCover"></div>
