--- a/app.html
+++ b/app.html
@@ -15,8 +15,41 @@
         <link rel="stylesheet" href="css/style.css?v2322">
         <script src="main.js" type="module"></script>
     </head> 
+
+ <style>
+    html {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        -webkit-user-select: none; /* Safari */
+        -ms-user-select: none; /* IE 10 and IE 11 */
+        user-select: none; /* Standard syntax */
+    }
+    button {
+border: 1px solid #2e518b; /*anchura, estilo y color borde*/
+padding: 10px; /*espacio alrededor texto*/
+background-color: #2e518b; /*color botón*/
+color: #ffffff; /*color texto*/
+text-decoration: none; /*decoración texto*/
+text-transform: uppercase; /*capitalización texto*/
+font-family: 'Helvetica', sans-serif; /*tipografía texto*/
+border-radius: 50px; /*bordes redondos*/
+}
+    body {
+        background: url(https://static4.depositphotos.com/1006724/331/i/600/depositphotos_3310598-stock-photo-in-radio-studio.jpg);
+        text-shadow: 0px 0px 20px #000;
+        background-size: cover;
+        overflow: hidden;
+        color: #fff;
+    }
+
+    </style>
+	
    <center><button id="installButton" style="display: none"> ⫷ Instalar la  APP ⫸</button> </center>
+	
 <body>
+  
   <div class="cover-site">
         <div id="bgCover"></div>
         <div class="bg-mask"></div>
